--- a/Final/Punto1.ipynb
+++ b/Final/Punto1.ipynb
@@ -29,7 +29,7 @@
       "cell_type": "code",
       "source": [
         "!pip install pennylane\n",
-        "\n",
+        "# Importación de librerías necesarias para la computación cuántica, análisis de datos y métricas de evaluación\n",
         "import pennylane as qml\n",
         "from pennylane import numpy as np\n",
         "from pennylane.optimize import AdamOptimizer\n",
@@ -97,17 +97,23 @@
         "import zipfile\n",
         "import os\n",
         "\n",
-        "with zipfile.ZipFile('titanic.zip', 'r') as zip_ref:\n",
+        "with zipfile.ZipFile('titanic.zip', 'r') as zip_ref: # Descomprimir el dataset Titanic\n",
         "    zip_ref.extractall('titanic_data')\n",
         "\n",
-        "print(\"Archivos extraídos:\")\n",
+        "print(\"Archivos extraídos:\") # Mostrar archivos extraídos\n",
         "print(os.listdir('titanic_data'))\n",
+        "\n",
+        "# Cargar y preparar los datos\n",
+        "# Convertimos las variables categóricas a variables \"dummy\"\n",
+        "# Rellenamos valores faltantes en la edad\n",
+        "# Creamos una nueva característica: si es niño o no. Con base en \"age\"\n",
         "\n",
         "df_train = pd.read_csv('/content/titanic_data/train.csv')\n",
         "df_train['Pclass'] = df_train['Pclass'].astype(str)\n",
         "df_train = pd.concat([df_train, pd.get_dummies(df_train[['Pclass', 'Sex', 'Embarked']])], axis=1)\n",
         "df_train['Age'] = df_train['Age'].fillna(df_train['Age'].median())\n",
         "df_train['is_child'] = df_train['Age'].map(lambda x: 1 if x < 12 else 0)\n",
+        "# Definimos las características (features) que vamos a usar\n",
         "cols_model = ['is_child', 'Pclass_1', 'Pclass_2', 'Sex_female']"
       ],
       "metadata": {
@@ -141,6 +147,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Separamos los datos en entrenamiento y prueba\n",
         "X_train, X_test, y_train, y_test = train_test_split(\n",
         "    df_train[cols_model],\n",
         "    df_train['Survived'],\n",
@@ -170,6 +177,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Para la codificación de entrada clásica a cuántica (Feature Map)\n",
         "def statepreparation(x):\n",
         "    qml.BasisEmbedding(x, wires=range(0, 4))"
       ],
@@ -191,6 +199,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Definimos una capa del ansatz (bloques rotacionales + entrelazamiento con CNOTs)\n",
         "def layer(W):\n",
         "    for i in range(4):\n",
         "        qml.Rot(*W[i], wires=i)\n",
@@ -199,17 +208,21 @@
         "    qml.CNOT(wires=[2, 3])\n",
         "    qml.CNOT(wires=[3, 0])\n",
         "\n",
+        "# Definimos el número de qubits y capas del circuito\n",
         "num_qubits = 4\n",
         "num_layers = 2\n",
+        "# Inicializamos el dispositivo cuántico\n",
         "dev = qml.device(\"default.qubit\", wires=num_qubits)\n",
         "\n",
+        "# Para la cconstrucción del circuito cuántico completo con Feature Map + Ansatz\n",
         "@qml.qnode(dev, interface=\"autograd\")\n",
         "def circuit(weights, x):\n",
         "    statepreparation(x)\n",
         "    for W in weights:\n",
         "        layer(W)\n",
-        "    return qml.expval(qml.PauliZ(0))\n",
+        "    return qml.expval(qml.PauliZ(0)) # Medimos vaor esperado en Z del primer qubit\n",
         "\n",
+        "# Clasificador cuántico variacional: suma del circuito y un bias\n",
         "def variational_classifier(weights, bias, x):\n",
         "    return circuit(weights, x) + bias"
       ],
@@ -231,6 +244,9 @@
     {
       "cell_type": "code",
       "source": [
+        "# Función de pérdida cuadrática\n",
+        "# Mide la diferencia entre predicción y etiqueta real\n",
+        "\n",
         "def square_loss(labels, predictions):\n",
         "    loss = 0\n",
         "    for l, p in zip(labels, predictions):\n",
@@ -255,6 +271,9 @@
     {
       "cell_type": "code",
       "source": [
+        "# Función de costo que depende de los parámetros y los datos\n",
+        "# Utiliza square_loss para calcular el error\n",
+        "\n",
         "def cost(weights, bias, X, Y):\n",
         "    predictions = [variational_classifier(weights, bias, x) for x in X]\n",
         "    return square_loss(Y, predictions)"
@@ -277,6 +296,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# Cálculo de accuracy (exactitud)\n",
+        "\n",
         "def accuracy(labels, predictions):\n",
         "    correct = 0\n",
         "    for l, p in zip(labels, predictions):\n",
@@ -302,6 +323,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# Inicializamos los pesos del circuito y el bias. La de los pesos se hace de manera pseudoaleatoria\n",
+        "\n",
         "np.random.seed(0)\n",
         "weights_init = 0.01 * np.random.randn(num_layers, num_qubits, 3, requires_grad=True)\n",
         "bias_init = np.array(0.0, requires_grad=True)\n",
@@ -350,21 +373,23 @@
     {
       "cell_type": "code",
       "source": [
-        "opt = AdamOptimizer(0.125)\n",
+        "opt = AdamOptimizer(0.125) # Optimizador clásico (AdamOptimizer)\n",
         "num_it = 70\n",
         "batch_size = math.floor(len(X_train) / num_it)\n",
         "\n",
+        "# Entrenamiento del modelo usando batches aleatorios\n",
         "for it in range(num_it):\n",
-        "    batch_index = np.random.randint(0, len(X_train), (batch_size,))\n",
+        "    batch_index = np.random.randint(0, len(X_train), (batch_size,)) #indexación para elegir batch aleatorio\n",
         "    X_batch = X_train[batch_index]\n",
         "    Y_batch = Y_train[batch_index]\n",
-        "    weights, bias, _, _ = opt.step(cost, weights, bias, X_batch, Y_batch)\n",
+        "    weights, bias, _, _ = opt.step(cost, weights, bias, X_batch, Y_batch) # Optimización por paso\n",
         "\n",
         "    predictions = [np.sign(variational_classifier(weights, bias, x)) for x in X_train]\n",
-        "    acc = accuracy(Y_train, predictions)\n",
+        "    acc = accuracy(Y_train, predictions) # Medición de accuracy en el set de entrenamiento\n",
         "\n",
         "    print(f\"Iter: {it + 1:5d} | Cost: {cost(weights, bias, X_train, Y_train):.7f} | Accuracy: {acc:.7f}\")\n",
         "\n",
+        "# parámetros finales aprendidos\n",
         "print(weights)\n",
         "print(bias)"
       ],
@@ -482,6 +507,7 @@
         "\n",
         "predictions = [np.sign(variational_classifier(weights, bias, x)) for x in X_test]\n",
         "\n",
+        "# Métricas de evaluación\n",
         "print(\"Accuracy:\", accuracy_score(Y_test, predictions))\n",
         "print(\"Precision:\", precision_score(Y_test, predictions))\n",
         "print(\"Recall:\", recall_score(Y_test, predictions))\n",
