--- a/Final/Punto1.ipynb
+++ b/Final/Punto1.ipynb
@@ -155,7 +155,7 @@
         "    random_state=42,\n",
         "    stratify=df_train['Survived']\n",
         ")\n",
-        "\n",
+        "# Convertimos a formato compatible con PennyLane (tensores de autograd)\n",
         "X_train = np.array(X_train.values, requires_grad=False)\n",
         "Y_train = np.array(y_train.values * 2 - np.ones(len(y_train)), requires_grad=False)"
       ],
